appId: com.dmanto.blefakerdemo
---
- launchApp
- extendedWaitUntil:
    visible: "Heart Rate Monitor"
    timeout: 10000

# Scan
- tapOn:
    id: "scan-button"
- extendedWaitUntil:
    visible: "CorSense"
    timeout: 10000

# Connect
- tapOn: "CorSense"
- extendedWaitUntil:
    visible:
      id: "bpm-value"
    timeout: 10000
- assertVisible: "BPM"
